compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/i8_neg.fe
contract Foo:
    pub def bar() -> i8:
        return i8(-129)